# kinetik-engine

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: agent-task.md
.github/workflows/: ci.yml
crates/kinetik-app/: Cargo.toml
crates/kinetik-app/src/: diagnostics.rs  frame.rs  lib.rs  runtime_world.rs
crates/kinetik-app/src/runtime_world/: tests.rs
crates/kinetik-audio/: Cargo.toml
crates/kinetik-audio/src/: lib.rs
crates/kinetik-bundle/: Cargo.toml
crates/kinetik-bundle/src/: lib.rs
crates/kinetik-command/: Cargo.toml
crates/kinetik-command/src/: asset.rs  change.rs  dirty.rs  error.rs  history.rs  lib.rs  mode.rs  result.rs  scene.rs  script.rs  target_mode.rs  tests.rs
crates/kinetik-command/src/scene/: mutation_results.rs
crates/kinetik-command/src/tests/: asset_commands.rs  scene_commands.rs  scene_property_commands.rs  script_commands.rs
crates/kinetik-core/: Cargo.toml
crates/kinetik-core/src/: diagnostics.rs  error.rs  id.rs  lib.rs  math.rs  tests.rs
crates/kinetik-editor/: Cargo.toml
crates/kinetik-editor/fixtures/save_reload/: Kinetik.toml  assets.knmanifest  main.knscene
crates/kinetik-editor/src/: authoring_smoke.rs  explorer.rs  inspector.rs  lib.rs  mcp.rs  persistence.rs  play.rs  presentation.rs  presentation_font.rs  session.rs  shell.rs  template_smoke.rs  viewport.rs
crates/kinetik-editor/src/mcp/: mutating.rs  play.rs
crates/kinetik-editor/src/play/: tests.rs
crates/kinetik-editor/src/session/: tests.rs
crates/kinetik-editor/src/viewport/: tests.rs
crates/kinetik-physics/: Cargo.toml
crates/kinetik-physics/src/: controller.rs  input.rs  interaction.rs  lib.rs  tests.rs
crates/kinetik-project/: Cargo.toml
crates/kinetik-project/src/: lib.rs  tests.rs
crates/kinetik-reflect/: Cargo.toml
crates/kinetik-reflect/src/: descriptor.rs  error.rs  lib.rs  tests.rs  value.rs
crates/kinetik-render/: Cargo.toml
crates/kinetik-render/src/: diagnostics.rs  extraction.rs  lib.rs  material.rs  mesh.rs  smoke.rs  tests.rs
crates/kinetik-resource/: Cargo.toml
crates/kinetik-resource/src/: cache.rs  database.rs  error.rs  identity.rs  import.rs  layout.rs  lib.rs  manifest.rs  tests.rs
crates/kinetik-resource/src/tests/: identity.rs  layout.rs  manifest.rs  mod.rs
crates/kinetik-resource/tests/: import_cache.rs  import_foundation.rs  resource_database.rs
crates/kinetik-scene/: Cargo.toml
crates/kinetik-scene/src/: class.rs  document.rs  error.rs  lib.rs  mutation.rs  record.rs  scene.rs  tests.rs  transform.rs
crates/kinetik-scene/src/tests/: class.rs  default_scene.rs  document.rs  mutation.rs  scene_core.rs  transform.rs
crates/kinetik-script/: Cargo.toml
crates/kinetik-script-luau/: Cargo.toml
crates/kinetik-script-luau/src/: lib.rs
crates/kinetik-script/src/: diagnostics.rs  handles.rs  identity.rs  lib.rs  lifecycle.rs  structural.rs  tests.rs
crates/kinetik-signal/: Cargo.toml
crates/kinetik-signal/src/: cleanup.rs  connection.rs  descriptor.rs  error.rs  event.rs  lib.rs  registry.rs  tests.rs
crates/kinetik-signal/src/tests/: connections.rs  events.rs  mod.rs  registry.rs
crates/kinetik-terrain/: Cargo.toml
crates/kinetik-terrain/src/: lib.rs
crates/kinetik-test/: Cargo.toml
crates/kinetik-test/src/: lib.rs
crates/kinetik-ui/: Cargo.toml
crates/kinetik-ui/src/: lib.rs
docs/: constitution.md  grand-plan.md
docs/adr/: 0001-core-stack-rust-luau-wgpu-vello.md  0002-instance-scene-model.md  0003-handle-id-system.md  0004-project-organization.md  0005-resource-import-cache-and-metadata.md  0006-standard-renderer-and-shader-graph.md  0007-physics-authoring-model.md  0008-luau-scripting-api.md  0009-bundle-system.md  0010-terrain-and-world-environment.md  0011-agentic-editor-mcp.md  0012-project-serialization-format.md  0013-property-and-reflection-model.md  0014-editor-command-and-semantic-change-model.md  0015-diagnostics-model.md  0016-prefab-and-package-override-model.md  0017-unsafe-rust-boundary-policy.md  0018-dependency-governance.md  0019-edit-play-and-runtime-state-boundaries.md  0020-runtime-execution-model.md  0021-permissioned-http-service.md  0022-runtime-frame-and-event-order.md  README.md
docs/agents/: review-checklist.md  task-template.md
docs/architecture/: agentic-editor-mcp.md  assets-and-bundles.md  crate-map.md  overview.md  physics-model.md  project-organization.md  rendering-model.md  scripting-model.md  template-projects.md  terrain-and-world.md
docs/backlog/: milestones.md  post-template-roadmap.md
docs/dependency-proposals/: asset-import.md  core-utilities.md  editor-window-ui.md  luau.md  physics-rapier.md  renderer-wgpu.md  runtime-app.md  serialization-toml-ron.md
docs/internal-apis/: README.md  command-change-record.md  diagnostics-store.md  mcp-command-surface.md  project-editor-session.md  resource-database.md  resource-reference-validation.md  runtime-frame.md  scene-reflection.md  signal-bus.md
docs/quality/: testing-strategy.md
examples/hello_scene/: README.md
templates/: README.md
templates/basic-fps/: Kinetik.toml  README.md  VERIFY.md
templates/basic-fps/scenes/: main.knscene
templates/pbr-material-demo/: Kinetik.toml  README.md  VERIFY.md
templates/pbr-material-demo/scenes/: main.knscene
templates/primitive-showcase/: Kinetik.toml  README.md  VERIFY.md
templates/primitive-showcase/scenes/: main.knscene
tools/agent-loop/: README.md
