[package]
name = "kinetik-bundle"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Runtime content bundle build/load/verify contracts for Kinetik."

[lints]
workspace = true

[dependencies]
kinetik-core = { path = "../kinetik-core" }
kinetik-resource = { path = "../kinetik-resource" }
