[package]
name = "kinetik-command"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Validated command result and semantic change contracts for Kinetik."

[lints]
workspace = true

[dependencies]
kinetik-core = { path = "../kinetik-core" }
kinetik-reflect = { path = "../kinetik-reflect" }
kinetik-resource = { path = "../kinetik-resource" }
kinetik-scene = { path = "../kinetik-scene" }
kinetik-script = { path = "../kinetik-script" }
