[package]
name = "kinetik-editor"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Kinetik Studio editor shell and editor-only systems."

[lints]
workspace = true

[dependencies]
kinetik-core = { path = "../kinetik-core" }
kinetik-app = { path = "../kinetik-app" }
