[package]
name = "kinetik-project"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Project identity, settings, document references, and health contracts for Kinetik."

[lints]
workspace = true

[dependencies]
kinetik-core = { path = "../kinetik-core" }
kinetik-resource = { path = "../kinetik-resource" }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
