[package]
name = "kinetik-render"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "wgpu renderer, standard PBR, and material/shader contracts for Kinetik."

[lints]
workspace = true

[dependencies]
kinetik-core = { path = "../kinetik-core" }
kinetik-resource = { path = "../kinetik-resource" }
