[package]
name = "kinetik-resource"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Resource handles, asset paths, metadata, and cache contracts for Kinetik."

[lints]
workspace = true

[dependencies]
kinetik-core = { path = "../kinetik-core" }
kinetik-reflect = { path = "../kinetik-reflect" }
kinetik-scene = { path = "../kinetik-scene" }
