[package]
name = "kinetik-scene"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Instance hierarchy, transforms, and scene contracts for Kinetik."

[lints]
workspace = true

[dependencies]
kinetik-core = { path = "../kinetik-core" }
kinetik-reflect = { path = "../kinetik-reflect" }
ron = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
