[package]
name = "kinetik-script"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Runtime-agnostic script lifecycle contracts for Kinetik."

[lints]
workspace = true

[dependencies]
kinetik-core = { path = "../kinetik-core" }
