[package]
name = "kinetik-terrain"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Terrain data, chunks, and world terrain contracts for Kinetik."

[lints]
workspace = true

[dependencies]
kinetik-core = { path = "../kinetik-core" }
