[package]
name = "kinetik-test"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Test utilities and fixtures for Kinetik crates."

[lints]
workspace = true

[dependencies]
kinetik-core = { path = "../kinetik-core" }
kinetik-project = { path = "../kinetik-project" }
